[gd_scene load_steps=8 format=3 uid="uid://dt5qf446j6iag"]

[ext_resource type="Shader" uid="uid://di1deds60ar33" path="res://shaders/squigglevision.gdshader" id="1_mdbi0"]
[ext_resource type="Texture2D" uid="uid://dotgjl7rj7m78" path="res://textures/squiggle.png" id="2_djbqq"]
[ext_resource type="Script" uid="uid://dvwa8odowkrk4" path="res://scenes/pencil_line.gd" id="3_djbqq"]
[ext_resource type="AudioStream" uid="uid://3x2sfwbuuac6" path="res://audio/sfx/part.wav" id="4_w7yri"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lnu2h"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lbhrr"]
noise = SubResource("FastNoiseLite_lnu2h")
seamless = true
seamless_blend_skirt = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iywne"]
shader = ExtResource("1_mdbi0")
shader_parameter/scale = Vector2(1, 1)
shader_parameter/strength = 15.0
shader_parameter/fps = 6.0
shader_parameter/noise = SubResource("NoiseTexture2D_lbhrr")

[node name="PencilLine" type="Line2D"]
material = SubResource("ShaderMaterial_iywne")
width = 20.0
texture = ExtResource("2_djbqq")
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("3_djbqq")

[node name="TtlTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_w7yri")
volume_db = -10.0
bus = &"sfx"

[connection signal="timeout" from="TtlTimer" to="." method="_on_ttl_timer_timeout"]
